<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5262F3"
    tools:context=".Sobremi">

    <Button
        android:id="@+id/btnShareText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLugar"
        android:layout_alignParentStart="false"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="0dp"
        android:layout_marginTop="106dp"
        android:layout_marginBottom="198dp"
        android:background="#0121BC"
        android:text="@string/opinion"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btnLugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnTwitter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="106dp"
        android:background="#0121BC"
        android:text="@string/lugar_fav"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btnTwitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="176dp"
        android:background="#0121BC"
        android:text="@string/red_social"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/tv5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:text="@string/sobre_mi"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />
</RelativeLayout>