<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5262F3"
    tools:context=".SumarMultiplicar">

    <EditText
        android:id="@+id/etNumero1"
        android:layout_width="101dp"
        android:layout_height="35dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="53dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/numero_1"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/btnMultiplicar"
        app:layout_constraintTop_toBottomOf="@+id/tvSumarMultiplicar" />

    <EditText
        android:id="@+id/etNumero2"
        android:layout_width="101dp"
        android:layout_height="35dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="34dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/numero_2"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/btnSumar"
        app:layout_constraintTop_toBottomOf="@+id/etNumero1" />

    <Button
        android:id="@+id/btnSumar"
        style="@style/a"
        android:layout_marginStart="50dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="70dp"
        android:text="@string/sumar"
        app:layout_constraintEnd_toStartOf="@+id/etNumero2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMultiplicar" />

    <TextView
        android:id="@+id/tvSumarMultiplicar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="184dp"
        android:text="@string/sumar_multiplicar"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnMultiplicar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="70dp"
        android:background="#001AFF"
        android:text="@string/multiplicar"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/etNumero1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSumarMultiplicar" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginEnd="205dp"
        android:layout_marginBottom="56dp"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnVolver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvResultado2" />

    <TextView
        android:id="@+id/tvResultado2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="40dp"
        android:text="@string/resultado2"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSumar" />

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="127dp"
        android:layout_height="46dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="135dp"
        android:background="#001AFF"
        android:text="@string/volver_al_menu"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNumero2" />
</androidx.constraintlayout.widget.ConstraintLayout>