<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5262F3"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_weight="1"
        android:contentDescription="@string/imagen"
        android:scaleType="centerCrop"
        app:srcCompat="@mipmap/perfil_foreground" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_weight="0.0"
        android:text="@string/nombre"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnBienvenido"
        android:layout_width="168dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="4dp"
        android:layout_weight="0.1"
        android:background="#001AFF"
        android:shadowColor="#8C0D0D"
        android:text="@string/bienvenido"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />
</LinearLayout>